# open-musicgang

./: .gitignore  Cargo.toml  ci.yml  config.sample.Toml  config.sample.toml
.github/workflows/: ci.yml  config.ci.toml
app/entity/: Cargo.toml
app/entity/src/: lib.rs  user.rs
app/service/: Cargo.toml
app/service/src/: user_service.rs
app/src/: lib.rs
cmd/mg-cli/: Cargo.toml
cmd/mgd/: Cargo.toml  main.rs
cmd/omg/: main.rs
common/src/: error.rs
crates/app/: Cargo.toml
crates/app/entity/: Cargo.toml
crates/app/entity/src/: lib.rs  user.rs
crates/app/err/: Cargo.toml
crates/app/service/: Cargo.toml
crates/app/service/src/: user_service.rs
crates/app/src/: context.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: context.rs  error.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: app_config.rs  env.rs  lib.rs
crates/mock/: Cargo.toml
crates/mock/src/: user.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: db.rs  lib.rs  migrations.rs  postgres.rs  user.rs
crates/postgres/src/migrations/: mod.rs
crates/postgres/src/query/: mod.rs  user.rs
crates/postgres/src/utils/: query.rs
crates/redis/: Cargo.toml
crates/redis/src/: redis.rs
mock/: Cargo.toml
mock/src/: user.rs
