[package]
description = "OpenMusicGang"
name = "openmusicgang"
version = "0.0.0"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
openmusicgang-entity   = { path = "crates/app/entity" }
openmusicgang-service  = { path = "crates/app/service" }
openmusicgang-config   = { path = "crates/config" }
openmusicgang-postgres = { path = "crates/postgres" }

[[bin]]
path = "cmd/omg/main.rs"
name = "openmusicgang"

[workspace]
members = [ 
    "crates/app", 
    "crates/app/entity", 
    "crates/app/err", 
    "crates/app/service", 
    "crates/config", 
    "crates/mock", 
    "crates/postgres"
]