[package]
name = "openmusicgang-mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmusicgang-app = {path = "../app"}
openmusicgang-entity = {path = "../app/entity"}
openmusicgang-service = {path = "../app/service"}