[package]
name = "openmusicgang-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.0" }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
openmusicgang-common = {path = "../common"}
openmusicgang-service = {path = "../app/service"}
openmusicgang-entity = {path = "../app/entity"}
openmusicgang-config = {path = "../config"}
