[package]
name = "openmusicgang-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.5"
openmusicgang-err = { path = "../app/err"}
openmusicgang-config = { path = "../config"}
once_cell = "1.10.0"
